2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in (GNATFLAGS): Compile with -gnaty.
	* bfdada/bfd-internal.adb: Fix -gnaty warnings.
	* bfdada/bfd-sections.adb: Likewise.
	* bfdada/bfd-sections.ads: Likewise.
	* bfdada/bfd-symtab.adb: Likewise.
	* bfdada/bfd-symtab.ads: Likewise.
	* bfdada/bfd-thin-sections.ads: Likewise.
	* bfdada/bfd-thin-symtab.ads: Likewise.
	* bfdada/bfd-thin.ads: Likewise.
	* bfdada/bfd.adb: Likewise.
	* bfdada/bfd.ads: Likewise.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-symtab.adb (Is_Done): New function.
	(Current, Get_Iterator): Likewise.
	(Next): New procedure.
	(Open_Symbols): Fix symbol table creation.
	(Find_Nearest_Line): Fix passing of symbol table.
	(Get_Symbol): Return the symbol at the specified index.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-symtab.ads (Is_Done): New function.
	(Current, Get_Iterator): Likewise.
	(Next): New procedure.
	(Symbol_Iterator): New record.
	(Get_Value, Get_Flags): Update import pragma.
	(Get_Symbol): Use positive for index.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* examples/bfdinfo.adb: New example (very crude readelf).
	* examples/Makefile.in: New file.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* Makefile.am (SUBDIRS): Add examples.
	* Makefile.in: Generate.
	* configure.in: Configure example Makefile.
	* configure: Generate.

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in: Fix install.

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/testsuite/Makefile.in: Add -I$(srcdir) so that
	compiling in another directory is possible.
	* bfdada/Makefile.in: Likewise and cleanup

2003-02-02  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-sections.ads: Remove Interfaces dependency.
	* bfdada/bfd-symtab.ads: Likewise.

2003-01-31  Stephane Carrez  <stcarrez@nerim.fr>

	* INSTALL: New file.
	* README: New file.

2003-01-26  Stephane Carrez  <stcarrez@nerim.fr>
